welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:24: error: ':' expected but ')' found.
def peindre(T){
             ^Array1:39: error: identifier expected but '}' found.
}
^